footer - falta arrumar

--- a/index.html
+++ b/index.html
@@ -140,6 +140,23 @@
             </div>
         </section>
     </main>
-    <footer></footer>    
+    <footer>
+        <div class="upper">
+            <div class="title__footer">
+                sunnyside
+            </div>
+            <div class="more__footer">
+                <p>About</p>
+                <p>Services</p>
+                <p>Projects</p>
+            </div>
+        </div>
+        <div class="links">
+            <img src="./images/icon-facebook.svg" alt="">
+            <img src="./images/icon-instagram.svg" alt="">
+            <img src="./images/icon-twitter.svg" alt="">
+            <img src="./images/icon-pinterest.svg" alt="">
+        </div>
+    </footer>    
 </body>
 </html>
