--- a/index.html
+++ b/index.html
@@ -141,22 +141,20 @@
         </section>
     </main>
     <footer>
-        <div class="upper">
-            <div class="title__footer">
-                sunnyside
-            </div>
-            <div class="more__footer">
-                <p>About</p>
-                <p>Services</p>
-                <p>Projects</p>
-            </div>
-        </div>
-        <div class="links">
-            <img src="./images/icon-facebook.svg" alt="">
-            <img src="./images/icon-instagram.svg" alt="">
-            <img src="./images/icon-twitter.svg" alt="">
-            <img src="./images/icon-pinterest.svg" alt="">
-        </div>
+            <h2>sunnyside</h2>
+            <nav>
+                <ul>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Projects</a></li>
+                </ul>
+            </nav>
+            <ul>
+                <li><a href="#"><img src="./images/icon-facebook.svg" alt=""></a></li>
+                <li><a href="#"><img src="./images/icon-instagram.svg" alt=""></a></li>
+                <li><a href="#"><img src="./images/icon-twitter.svg" alt=""></a></li>
+                <li><a href="#"><img src="./images/icon-pinterest.svg" alt=""></a></li>
+            </ul>
     </footer>    
 </body>
 </html>
