--- a/index.html
+++ b/index.html
@@ -14,14 +14,21 @@
         <nav>
             <div class="logo">sunnyside</div>
             <div class="menu">
-                <img src="./images/icon-hamburger.svg" alt="menu hamburger">
+                <button id="btn-hamburguer"><img src="./images/icon-hamburger.svg" alt="menu hamburger"></button>
             </div>
+            <ul id="mobile-menu" >
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><button id="contact"><a href="#">CONTACT</a></button></li>
+            </ul>
         </nav>
         <h1>We are creatives</h1>
         <img class="arrow-down" src="./images/icon-arrow-down.svg" alt="seta para baixo">
     </header>
     <main>
         <section class="info">
+           <div class="egg-info">
             <picture>
                 <source media="(min-width: 465px)" srcset="./images/desktop/image-transform.jpg">
                 <img src="./images/mobile/image-transform.jpg" alt="ovo com um fundo amarelo">
@@ -39,9 +46,11 @@
                     <div class="line line-yellow"></div>
                 </div>
             </div>
+           </div>
 
+            <picture>
             <source media="(min-width: 465px)" srcset="./images/desktop/image-stand-out.jpg">
-                <img src="./images/mobile/image-stand-out.jpg" alt="ovo com um fundo amarelo">
+                <img src="./images/mobile/image-stand-out.jpg" alt="">
             </picture>
 
             <div class="description">
@@ -150,10 +159,10 @@
                 </ul>
             </nav>
             <ul>
-                <li><a href="#"><img src="./images/icon-facebook.svg" alt=""></a></li>
-                <li><a href="#"><img src="./images/icon-instagram.svg" alt=""></a></li>
-                <li><a href="#"><img src="./images/icon-twitter.svg" alt=""></a></li>
-                <li><a href="#"><img src="./images/icon-pinterest.svg" alt=""></a></li>
+                  <li><a href="#"><img src="./images/icon-facebook.svg" alt=""></a></li>
+                    <li><a href="#"><img src="./images/icon-instagram.svg" alt=""></a></li>
+                    <li><a href="#"><img src="./images/icon-twitter.svg" alt=""></a></li>
+                    <li><a href="#"><img src="./images/icon-pinterest.svg" alt=""></a></li>
             </ul>
     </footer>    
 </body>
