--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
                 <source media="(min-width: 465px)" srcset="./images/desktop/image-transform.jpg">
                 <img src="./images/mobile/image-transform.jpg" alt="ovo com um fundo amarelo">
             </picture>
-
             <div class="description">
                 <div class="description__title">
                     Transform your brand
@@ -47,25 +46,25 @@
                 </div>
             </div>
            </div>
-
+          <div class="mug-info">
             <picture>
-            <source media="(min-width: 465px)" srcset="./images/desktop/image-stand-out.jpg">
-                <img src="./images/mobile/image-stand-out.jpg" alt="">
-            </picture>
-
-            <div class="description">
-                <div class="description__title">
-                    Stand out to the right audience
+                <source media="(min-width: 465px)" srcset="./images/desktop/image-stand-out.jpg">
+                    <img src="./images/mobile/image-stand-out.jpg" alt="">
+                </picture>
+                <div class="description">
+                    <div class="description__title">
+                        Stand out to the right audience
+                    </div>
+                    <div class="description__text">
+                        Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.
+                    </div>
+                    <div class="description__link">
+                       Learn more
+                        <div class="line line-red"></div>
+                    </div>
                 </div>
-                <div class="description__text">
-                    Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.
-                </div>
-                <div class="description__link">
-                   Learn more
-                    <div class="line line-red"></div>
-                </div>
-            </div>
-
+          </div>
+          <div class="photo">
             <div class="container graphic">
                 <div class="description">
                     <div class="description__title">
@@ -94,47 +93,49 @@
                 CLIENT TESTIMONIALS
             </h2>
 
-            <div class="client">
-                <div class="client__avatar client1"></div>
-                <div class="client__text">
-                    We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
-                </div>
-                <div>
-                    <div class="client__name">
-                        Emily R.
+            <div id="clients">
+                <div class="client">
+                    <div class="client__avatar client1"></div>
+                    <div class="client__text">
+                        We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
                     </div>
-                    <div class="client__job">
-                        Marketing Director
-                    </div>
-                </div>
-            </div>
-
-            <div class="client">
-                <div class="client__avatar client2"></div>
-                <div class="client__text">
-                    Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
-                </div>
-                <div>
-                    <div class="client__name">
-                        Thomas S.
-                    </div>
-                    <div class="client__job">
-                        Chief Operating Officer
+                    <div>
+                        <div class="client__name">
+                            Emily R.
+                        </div>
+                        <div class="client__job">
+                            Marketing Director
+                        </div>
                     </div>
                 </div>
-            </div>
-
-            <div class="client">
-                <div class="client__avatar client3"></div>
-                <div class="client__text">
-                    Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
-                </div>
-                <div>
-                    <div class="client__name">
-                        Jennie F.
+    
+                <div class="client">
+                    <div class="client__avatar client2"></div>
+                    <div class="client__text">
+                        Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
                     </div>
-                    <div class="client__job">
-                        Business Owner
+                    <div>
+                        <div class="client__name">
+                            Thomas S.
+                        </div>
+                        <div class="client__job">
+                            Chief Operating Officer
+                        </div>
+                    </div>
+                </div>
+    
+                <div class="client">
+                    <div class="client__avatar client3"></div>
+                    <div class="client__text">
+                        Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
+                    </div>
+                    <div>
+                        <div class="client__name">
+                            Jennie F.
+                        </div>
+                        <div class="client__job">
+                            Business Owner
+                        </div>
                     </div>
                 </div>
             </div>
@@ -142,10 +143,22 @@
 
         <section class="images">
             <div class="gallery">
-                <img src="./images/mobile/image-gallery-milkbottles.jpg" alt="">
-                <img src="./images/mobile/image-gallery-orange.jpg" alt="">
-                <img src="./images/mobile/image-gallery-cone.jpg" alt="">
-                <img src="./images/mobile/image-gallery-sugar-cubes.jpg" alt="">
+                <picture class="imgs">
+                    <source media="(min-width: 465px)" srcset="./images/desktop/image-gallery-milkbottles.jpg">
+                        <img src="./images/mobile/image-gallery-milkbottles.jpg" alt="">
+                    </picture>
+                    <picture class="imgs">
+                        <source media="(min-width: 465px)" srcset="./images/desktop/image-gallery-orange.jpg">
+                            <img src="./images/mobile/image-gallery-orange.jpg" alt="">
+                        </picture>
+                        <picture class="imgs">
+                            <source media="(min-width: 465px)" srcset="./images/desktop/image-gallery-cone.jpg">
+                                <img src="./images/mobile/image-gallery-cone.jpg" alt="">
+                            </picture>
+                            <picture class="imgs">
+                                <source media="(min-width: 465px)" srcset="./images/desktop/image-gallery-sugarcubes.jpg">
+                                    <img src="./images/mobile/image-gallery-sugar-cubes.jpg" alt="">
+                                </picture>
             </div>
         </section>
     </main>
